Trabajando en movieDetail

--- a/src/components/css/list.css
+++ b/src/components/css/list.css
@@ -76,3 +76,13 @@
     transform: scale(1.1);
     transition: 400ms;
 }
+
+.list-MovieDetailArticle {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 400;
+}
