--- a/src/components/css/movieDetail.css
+++ b/src/components/css/movieDetail.css
@@ -1,56 +1,98 @@
-.movieDetail-div {
-    max-width: 900px;
-    border-radius: 8px;
-    overflow: hidden;
+.movieDetail-extDiv {
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url('../../assets/img/fondo_hal5.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
 }
 
-.movieDetail-div.colored {
-    background-color: rgb(255, 0, 100);
+.movieDetail-intDiv {
+    width: 700px;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
-@media (max-width: 992px) {
-    .movieDetail-div {
-        max-width: 700px;
-    }
+.movieDetail-imgDiv {
+    position: relative;
+    width: 100%;
 }
 
-@media (max-width: 768px) {
-    .movieDetail-div, .movieDetail-backdrop {
-        height: 250px;
-        max-width: 500px;
-    }
-}
-@media (max-width: 540px) {
-    .movieDetail-div {
-        max-width: 300px;
-        height: 400px;
-    }
-    .movieDetail-backdrop {
-        display: none;
-    }
+.movieDetail-img {
+    aspect-ratio: 700/393;
 }
 
-.movieDetail-text {
-    display: none;
+.movieDetail-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 600;
+    text-shadow: 1px 1px 2px black;
+    font-size: 3em;
+}
+
+.movieDetail-gradientOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 500;
+}
+
+.movieDetail-closeBtn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 600;
+    background-color: transparent;
+    border: none;
+    font-size: 0.4em;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    box-shadow: none;
+}
+
+.movieDetail-closeBtn:hover {
+    text-shadow: 0px 0px 10px #26B0DF;
+}
+
+.movieDetail-genreBtn {
+    border-radius: 25px;
+    background-color: #26B0DF;
+    color: white;
+}
+
+.movieDetail-genreBtn:hover, .movieDetail-genreBtn:active {
+    background-color: #26B0DF !important;
+    color: white;
+    box-shadow: 0px 0px 6px white;
+}
+
+.movieDetail-overviewDiv {
+    height: calc(100vh - 393px);
     overflow-y: auto;
     scrollbar-width: thin;
-    scrollbar-color: #c70039 #ffb3c6;
+    scrollbar-color: black gray;
 }
 
-.movieDetail-text::-webkit-scrollbar {
+.movieDetail-overviewDiv::-webkit-scrollbar {
     width: 8px;
 }
 
-.movieDetail-text::-webkit-scrollbar-track {
-    background: blueviolet;
+.movieDetail-overviewDiv::-webkit-scrollbar-track {
+    background: grey;
     border-radius: 10px;
 }
 
-.movieDetail-text::-webkit-scrollbar-thumb {
-    background-color: #c7008b;
+.movieDetail-overviewDiv::-webkit-scrollbar-thumb {
+    background-color: black;
     border-radius: 10px;
-    border: 2px solid #ffb3c6;
+    border: 2px solid gray;
 }
