--- a/src/components/css/catalog.css
+++ b/src/components/css/catalog.css
@@ -35,16 +35,19 @@ header {
 }
 
 .catalog-headerTitle-movies {
-    color: rgba(0,0,0,0.2);
+    color: rgba(0, 0, 0, 0.2);
     font-weight: 100;
     -webkit-text-stroke: 1px white;
 }
 
-.catalog-selectGenre, .catalog-searchTitle, .catalog-searchTitleButton {
+.catalog-selectGenre,
+.catalog-searchTitle,
+.catalog-searchTitleButton {
     height: 35px;
 }
 
-.catalog-selectGenre, .catalog-searchTitle {
+.catalog-selectGenre,
+.catalog-searchTitle {
     background-color: #202020;
     color: white;
 }
@@ -55,10 +58,10 @@ header {
 
 .catalog-selectChevron {
     position: absolute;
-    top: 12px;
+    top: 8px;
     right: 10px;
     color: #bebebe;
-    font-size: 0.15em;
+    font-size: 0.8em;
 }
 
 .catalog-selectGenre {
@@ -77,24 +80,6 @@ header {
     color: white;
 }
 
-@media (max-width: 576px) {
-    header {
-        height: 100px;
-    }
-
-    main {
-        padding-top: 100px;
-    }
-
-    .catalog-selectGenre {
-        width: 180px;
-    }
-
-    .catalog-searchTitle {
-        width: 150px;
-    }
-}
-
 .catalog-searchDiv {
     position: relative;
 }
@@ -104,7 +89,7 @@ header {
     padding-left: 35px;
     border-radius: 20px;
     border: none;
-    box-shadow: inset 0px 0px 15px rgba(0,0,0, 0.3);
+    box-shadow: inset 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
 
 .catalog-searchTitle::-webkit-search-decoration,
@@ -125,13 +110,28 @@ header {
     background-color: transparent;
     border: none !important;
     color: gray;
-    font-size: 0.2em;
+    font-size: 1em;
 }
 
-.catalog-searchTitleButton, .catalog-searchTitle::placeholder {
+.catalog-searchTitleButton,
+.catalog-searchTitle::placeholder {
     color: #bebebe;
 }
 
 main {
     padding-top: 45px;
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 90px;
+    }
+
+    main {
+        padding-top: 80px;
+    }
+
+    .catalog-selectGenre, .catalog-searchTitle {
+        width: 140px;
+    }
 }
