--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -10,6 +10,7 @@
 
 .home-section {
     height: 100vh;
+    max-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('../../assets/img/fondo_hal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
