--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -9,8 +9,7 @@
 }
 
 .home-section {
-    height: 100vh;
-    max-height: 100vh;
+    height: 100dvh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('../../assets/img/fondo_hal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
