--- a/src/components/css/list.css
+++ b/src/components/css/list.css
@@ -89,7 +89,7 @@
 .list-MovieDetailArticle {
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
